[package]
name = "miracle_sudoku"
version = "0.1.0"
authors = ["Narazaki, Shuji <shujinarazaki@protonmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "sudoku144"

[dependencies]
lazy_static = "^1.4"
splr = { version = "^0.17", features = ["incremental_solver"] }

